src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #ff6f01d2;
  --ifm-color-primary-dark: #FF7001;
  --ifm-color-primary-darker: #FF7001;
  --ifm-color-primary-darkest: #FF7001;
  --ifm-color-primary-light: #ff6f01b4;
  --ifm-color-primary-lighter: #ff6f01b4;
  --ifm-color-primary-lightest: #ff6f01b4;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: #ff6f01d2;
  --ifm-color-primary-dark: #FF7001;
  --ifm-color-primary-darker: #FF7001;
  --ifm-color-primary-darkest: #FF7001;
  --ifm-color-primary-light: #ff6f01b4;
  --ifm-color-primary-lighter: #ff6f01b4;
  --ifm-color-primary-lightest: #ff6f01b4;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

.navbar__logo {
  height: 2.25rem;
}

@media (min-width: 997px) {
  .navbar {
    padding-left: calc(
      var(--fory-doc-sidebar-inset) +
      var(--ifm-menu-link-padding-horizontal)
    );
  }
}

.navbar__item {
  font-size: .95rem;
  margin-right: 0;
}

.navbar__link {
  font-size: .95rem;
  padding-left: .55rem;
  padding-right: .55rem;
}


.header-github-link:hover {
  opacity: 0.6;
}

.header-github-link::before {
  content: '';
  width: 24px;
  height: 24px;
  display: flex;
  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
  no-repeat;
}

[data-theme='dark'] .header-github-link::before {
  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='white' d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
  no-repeat;
}

.footer__copyright {
  font-size: .7em;
}

.footer__links {
  text-align: center;
}

.themed-logo-light {
  display: block;
}
.themed-logo-dark {
  display: none;
}

[data-theme='dark'] .themed-logo-light {
  display: none;
}

[data-theme='dark'] .themed-logo-dark {
  display: block;
}

/* Docs reading surface */
:root {
  --fory-doc-content-width: 860px;
  --fory-doc-shell-width: 908px;
  --fory-doc-wide-width: 860px;
  --fory-doc-gutter-width: 24px;
  --fory-doc-sidebar-inset: 2.75rem;
  --fory-doc-toc-right-inset: 5.5rem;
}

.theme-doc-breadcrumbs,
.theme-doc-footer,
.pagination-nav {
  max-width: var(--fory-doc-content-width);
  margin-left: auto;
  margin-right: auto;
}

.theme-doc-version-badge {
  display: inline-block;
  margin-left: max(0px, calc((100% - var(--fory-doc-shell-width)) / 2 + var(--fory-doc-gutter-width)));
}

.theme-doc-markdown {
  max-width: var(--fory-doc-shell-width);
  margin-left: auto;
  margin-right: auto;
  font-size: 1.03rem;
  line-height: 1.72;
}

.theme-doc-markdown > * {
  max-width: var(--fory-doc-content-width);
}

.theme-doc-markdown > h1,
.theme-doc-markdown > h2,
.theme-doc-markdown > h3,
.theme-doc-markdown > h4,
.theme-doc-markdown > h5,
.theme-doc-markdown > h6,
.theme-doc-markdown > p,
.theme-doc-markdown > header,
.theme-doc-markdown > ul,
.theme-doc-markdown > ol,
.theme-doc-markdown > blockquote,
.theme-doc-markdown > table,
.theme-doc-markdown > div,
.theme-doc-markdown > pre,
.theme-doc-markdown > .tabs-container,
.theme-doc-markdown > .theme-code-block,
.theme-doc-markdown > .admonition {
  margin-left: auto;
  margin-right: auto;
}

.theme-doc-markdown > table {
  display: table;
}

.theme-doc-markdown > pre,
.theme-doc-markdown > table,
.theme-doc-markdown > .tabs-container,
.theme-doc-markdown > .theme-code-block {
  max-width: var(--fory-doc-wide-width);
}

@media (min-width: 997px) {
  .theme-doc-breadcrumbs,
  .theme-doc-footer,
  .pagination-nav,
  .theme-doc-markdown {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }

  .theme-doc-toc-desktop {
    padding-right: var(--fory-doc-toc-right-inset);
  }
}

.theme-doc-markdown h1 {
  font-size: 2.6rem;
  line-height: 1.1;
  margin-bottom: 1.25rem;
}

.theme-doc-markdown h2 {
  font-size: 1.8rem;
  margin-top: 3rem;
}

.theme-doc-markdown h3 {
  font-size: 1.35rem;
  margin-top: 2.25rem;
}

.theme-doc-markdown p,
.theme-doc-markdown li {
  color: var(--ifm-color-emphasis-800);
}

.theme-doc-markdown table {
  font-size: .95rem;
}

.theme-doc-markdown th {
  background: var(--ifm-color-emphasis-100);
}

.theme-doc-markdown .theme-code-block,
.theme-doc-markdown pre {
  margin-top: 1rem;
  margin-bottom: 1.75rem;
}

.table-of-contents {
  font-size: .9rem;
  line-height: 1.55;
}

.table-of-contents__link {
  color: var(--ifm-color-emphasis-700);
}

.table-of-contents__link--active {
  color: var(--ifm-color-primary);
  font-weight: 600;
}

.theme-doc-sidebar-container {
  background: var(--ifm-background-surface-color);
}

.theme-doc-sidebar-menu {
  padding: .75rem .75rem .75rem var(--fory-doc-sidebar-inset);
}

.menu__link {
  border-radius: 6px;
  font-size: .96rem;
}

.menu__link--active {
  font-weight: 600;
}

.theme-doc-sidebar-menu .menu__caret::before,
.theme-doc-sidebar-menu .menu__link--sublist-caret::after {
  background: var(--ifm-menu-link-sublist-icon) 50% / 1rem 1rem no-repeat;
  height: .9rem;
  min-width: .9rem;
  opacity: .72;
  width: .9rem;
}

@media (max-width: 996px) {
  .theme-doc-markdown h1 {
    font-size: 2.15rem;
  }
}

